--- a/style/style.css
+++ b/style/style.css
@@ -111,21 +111,20 @@
   padding-top: 100px;
 }
 
-.padding-bottom {
-  padding-bottom: 100px;
-}
-
 .container-2 {
   width: 1920px;
   height: 1004px;
   background: #EBEBEB;
 }
 
+.margin-bottom {
+  margin-bottom: 57px;
+}
+
 .video {
   height: 600px;
   width: 1100px;
   display: block;
-  margin-top: 57px;
 }
 
 .footer {
